fixing overflow 9

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ nav ul li a:hover {
         transform: translate(0, 0);
     }
     50% {
-        transform: translate(10px, 10px);
+        transform: translate(200px, 200px);
     }
     100% {
         transform: translate(0, 0);
